--- a/src/Todo.css
+++ b/src/Todo.css
@@ -58,7 +58,12 @@ ul{
     align-items: center;
 }
 
+.hide{
+    display: none;
+}
+
 .cardModal{
     padding: 20px;
     background-color: white;
 }
+
